--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.1"
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^7.1.1",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,7 +23,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react/jsx-no-undef": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -35,8 +41,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.2.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   },
-
-  "homepage": "https://danidrd.github.io/danidrd-website"
+  "homepage": "https://danidrd.github.io"
 }
