--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   },
-  "homepage": "https://danidrd.github.io/"
+  "homepage": "https://danidrd.com/"
 }
