--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   },
-  "homepage": "https://danidrd.com/"
+  "homepage": "https://danidrd.com"
 }
